--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -172,10 +172,22 @@ img {
   display: flex;
   margin-left: auto;
   margin-right: auto;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .nav__logo__img {
   width: 12rem;
+  height: 3rem;
+  object-fit: cover;
+}
+
+.nav__logo__text {
+  color: white;
+  font-family: bangers;
+  font-size: 14px;
+  letter-spacing: 8px;
 }
 
 .nav__toggle {
