--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -165,12 +165,11 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
 }
 
 .nav__logo {
   display: flex;
-  margin-left: auto;
-  margin-right: auto;
   justify-content: center;
   align-items: center;
   flex-direction: column;
@@ -212,6 +211,8 @@ img {
   flex-direction: column;
   align-items: center;
   row-gap: 1rem;
+  position: absolute;
+  left: 70%;
 }
 
 .nav__link {
@@ -949,6 +950,15 @@ img {
 /*=============== MEDIA QUERIES ===============*/
 /* For small devices */
 @media screen and (max-width: 340px) {
+
+  .nav {
+    padding-right: 2rem;
+  }
+
+  .nav__logo {
+    margin-left: auto;
+    margin-right: auto;
+  }
   
   .banner__title {
     font-size: 80px;
@@ -1005,6 +1015,16 @@ img {
 
 /* For medium devices */
 @media screen and (min-width: 576px) {
+
+  .nav {
+    padding-right: 2rem;
+  }
+
+  .nav__logo {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
   .home__container {
     grid-template-columns: .8fr 1fr;
   }
@@ -1190,6 +1210,16 @@ img {
 }
 
 @media screen and (min-width: 1440px) {
+
+  .nav {
+    padding-right: 0;
+  }
+
+  .nav__logo {
+    margin-left: 0;
+    margin-right: 0;
+  }
+  
   .banner__title {
     font-size: 370px;
     letter-spacing: 4rem;
